--- a/contact-us.html
+++ b/contact-us.html
@@ -100,10 +100,10 @@
         <img src="/img/menu.svg" alt="menu" class="menu-btn">
         </nav>
         <div class="main-content">
-            <h1 class="intro-heading">Colors are the</h1>
+            <h1 class="intro-heading">Colors Are The</h1>
             <h1 class="main heading">smile of nature</h1>
             <p>Look deep into nature, and you will understand everyrhing better</p>
-            <button class="btn btn-primary">Get Started</button>
+            <button class="btn btn-primary">Contact Us</button>
         </div>
     </div>
 </div>
@@ -145,7 +145,15 @@
 
 
 
+   <script>
+    const navBtn = document.querySelector('.menu-btn');
+    const navList = document.querySelector('.nav-list');
+    navBtn.addEventListener("click",function(){
+       navList.classList.toggle("active"); 
+    });
 
+
+ </script>
 
 
       
