--- a/service.html
+++ b/service.html
@@ -26,10 +26,10 @@
             <img src="/img/menu.svg" alt="menu" class="menu-btn">
             </nav>
             <div class="main-content">
-                <h1 class="intro-heading">Ww can never have</h1>
-                <h1 class="main heading">enough of nature</h1>
+                <h1 class="intro-heading">Find Peace In</h1>
+                <h1 class="main heading"> nature</h1>
                 <p>Look deep into nature, and you will understand everyrhing better</p>
-                <button class="btn btn-primary">Get Started</button>
+                <button class="btn btn-primary">Our Services</button>
             </div>
         </div>
     </div>
@@ -86,5 +86,15 @@
        <p>Love Nature by Rimsha Aleem</p>
     </div>
    </section>
+
+   <script>
+    const navBtn = document.querySelector('.menu-btn');
+    const navList = document.querySelector('.nav-list');
+    navBtn.addEventListener("click",function(){
+       navList.classList.toggle("active"); 
+    });
+
+
+ </script>
 </body>
 </html>
