--- a/contact-us.html
+++ b/contact-us.html
@@ -94,7 +94,8 @@
             <li><a href="about-us.html" target="_self">About</a></li>
             <li><a href="service.html"target="_self">Services</a></li>
             <li><a href="contact-us.html"target="_self">Contact</a></li>
-            <li><button class="btn btn-secondary">205-566-4444</button></li>
+            <a href="contact-us.html">
+                <li><button  class="btn btn-secondary">205-566-4444</button></li></a>
 
         </ul>
         <img src="/img/menu.svg" alt="menu" class="menu-btn">
